[metadata]
# This includes the license file in the wheel.
name = MJOLNIR
version = attr: MJOLNIR.__version__
author = Jakob Lass
author_email = MJOLNIRPackage@gmail.com
description = Neutron Scattering software suite
long_description = file: README.MD
license = MPL-2.0
license_file = LICENSE.txt
url = https://github.com/MJOLNIRPackage/MJOLNIR
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]

packages = find:
install_requires = 
    matplotlib>=3
    numpy>=1.14,<2.0
    h5py>=2.5
    scipy
    datetime
    pytest>=4.6
    pyperclip
    decorator
    pandas
    future
    sympy
    pip>=20
    ufit>=1.4.0
    pyqtgraph
    regex
python_requires = >=3.6
include_package_data = True
zip_safe = False
dependency_links = https://download.pytorch.org/whl/cpu

[options.package_data]
* = *.calib, *.csv
license = license.txt
CommandLineScripts/.settings = CommandLineScripts/.settings
Geometry/detsequence.dat = Geometry/detsequence.dat


[options.entry_points]
console_scripts =
    MJOLNIRHistory = MJOLNIR.CommandLineScripts.MJOLNIRHistory:main
    MJOLNIRConvert = MJOLNIR.CommandLineScripts.MJOLNIRConvert:main
    MJOLNIRCalibrationInspector = MJOLNIR.CommandLineScripts.MJOLNIRCalibrationInspector:main
    MJOLNIR3DView = MJOLNIR.CommandLineScripts.MJOLNIR3DView:main

[options.extras_require]
DS4MS = 
    torch
    torchvision
    torchaudio

gui = 
    MJOLNIRGui


[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0
